integração de uma rota para buscar alimentos a partir de seu id
